--- a/PracticeDay1/first_app/templates/first_app/contact.html
+++ b/PracticeDay1/first_app/templates/first_app/contact.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
 </head>
-<body>
-    <div style="display: flex; gap: 20px;">
-        <h4><a href="/" style="text-decoration: none; color: black;">Home</a></h4>
-        <h4><a href="/first_app/about" style="text-decoration: none; color: black;">About</a></h4>
-        <h4><a href="/first_app/contact" style="text-decoration: none; color: black;">Contact</a></h4>
+<body style="margin: 0; padding: 0;">
+    <div style="background: black; display: flex; gap: 20px; padding: 8px;">
+        <h4><a href="/" style="text-decoration: none; color:white;">Home</a></h4>
+        <h4><a href="/first_app/about" style="text-decoration: none; color:white;">About</a></h4>
+        <h4><a href="/first_app/contact" style="text-decoration: none; color:white;">Contact</a></h4>
     </div>
    
     <h1>This is Contact page</h1>
